fix(config): add missing base_url for GitHub OAuth

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,6 +2,7 @@ backend:
   name: github
   repo: himanchal08/cms-dashboard
   branch: main
+  base_url: https://vtn-cms-dashboard.netlify.app  # ✅ Required for GitHub OAuth
 
 media_folder: "public/uploads"
 public_folder: "/uploads"
